--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,6 @@
 /* NAVBAR */
 .navbar {
+    z-index: 10;
     display:block;
     position: sticky;
     top:0;
